--- a/app/libs/ColorPickerLibrary/src/main/AndroidManifest.xml
+++ b/app/libs/ColorPickerLibrary/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2010 Daniel Nilsson
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2010 Daniel Nilsson
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,10 +14,10 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="afzkl.development.colorpickerview"
-      android:versionCode="1"
-      android:versionName="1.0">
-      
+    package="afzkl.development.colorpickerview"
+    android:versionCode="1"
+    android:versionName="1.0">
+
     <application>
         <!-- android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="afzkl.development.ColorPickerView.activity.Main"
